lib/syntax/gscenarioParser.js
// Generated from gscenario.g4 by ANTLR 4.12.0
// jshint ignore: start
import antlr4 from 'antlr4';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class gscenarioParser extends antlr4.Parser {

    static grammarFileName = "gscenario.g4";
    static literalNames = [ null, "'-('", null, "')-'", "'/'" ];
    static symbolicNames = [ null, "Macro_start", "Any", "Macro_end", "Split" ];
    static ruleNames = [ "text", "text_in_macro", "macro", "plaintext" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = gscenarioParser.ruleNames;
        this.literalNames = gscenarioParser.literalNames;
        this.symbolicNames = gscenarioParser.symbolicNames;
    }



	text() {
	    let localctx = new TextContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, gscenarioParser.RULE_text);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 12;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1 || _la===2) {
	            this.state = 10;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 2:
	                this.state = 8;
	                this.plaintext();
	                break;
	            case 1:
	                this.state = 9;
	                this.macro();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 14;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	text_in_macro() {
	    let localctx = new Text_in_macroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, gscenarioParser.RULE_text_in_macro);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 15;
	        this.plaintext();
	        this.state = 20;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 16;
	            this.match(gscenarioParser.Split);
	            this.state = 17;
	            this.text();
	            this.state = 22;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	macro() {
	    let localctx = new MacroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, gscenarioParser.RULE_macro);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 23;
	        this.match(gscenarioParser.Macro_start);
	        this.state = 24;
	        this.text_in_macro();
	        this.state = 25;
	        this.match(gscenarioParser.Macro_end);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	plaintext() {
	    let localctx = new PlaintextContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, gscenarioParser.RULE_plaintext);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 28; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 27;
	        		this.match(gscenarioParser.Any);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 30; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,3, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

gscenarioParser.EOF = antlr4.Token.EOF;
gscenarioParser.Macro_start = 1;
gscenarioParser.Any = 2;
gscenarioParser.Macro_end = 3;
gscenarioParser.Split = 4;

gscenarioParser.RULE_text = 0;
gscenarioParser.RULE_text_in_macro = 1;
gscenarioParser.RULE_macro = 2;
gscenarioParser.RULE_plaintext = 3;

class TextContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = gscenarioParser.RULE_text;
    }

	plaintext = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(PlaintextContext);
	    } else {
	        return this.getTypedRuleContext(PlaintextContext,i);
	    }
	};

	macro = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(MacroContext);
	    } else {
	        return this.getTypedRuleContext(MacroContext,i);
	    }
	};


}



class Text_in_macroContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = gscenarioParser.RULE_text_in_macro;
    }

	plaintext() {
	    return this.getTypedRuleContext(PlaintextContext,0);
	};

	Split = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(gscenarioParser.Split);
	    } else {
	        return this.getToken(gscenarioParser.Split, i);
	    }
	};


	text = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(TextContext);
	    } else {
	        return this.getTypedRuleContext(TextContext,i);
	    }
	};


}



class MacroContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = gscenarioParser.RULE_macro;
    }

	Macro_start() {
	    return this.getToken(gscenarioParser.Macro_start, 0);
	};

	text_in_macro() {
	    return this.getTypedRuleContext(Text_in_macroContext,0);
	};

	Macro_end() {
	    return this.getToken(gscenarioParser.Macro_end, 0);
	};


}



class PlaintextContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = gscenarioParser.RULE_plaintext;
    }

	Any = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(gscenarioParser.Any);
	    } else {
	        return this.getToken(gscenarioParser.Any, i);
	    }
	};



}




gscenarioParser.TextContext = TextContext; 
gscenarioParser.Text_in_macroContext = Text_in_macroContext; 
gscenarioParser.MacroContext = MacroContext; 
gscenarioParser.PlaintextContext = PlaintextContext; 
